--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,59 +40,6 @@ setw -g window-status-fg cyan
 setw -g window-status-bg default
 setw -g window-status-attr dim
 
-setw -g window-status-current-fg black
-setw -g window-status-current-bg cyan
-set -g window-status-current-attr bright
-
-# remap prefix to ctrl-a instead of default ctrl-b
-set -g prefix C-a
-
-# send ctrl-a to underlying program if pressed twice
-bind C-a send-prefix
-
-# lower default delay to 1
-set -sg escape-time 1
-
-# bind key to reload this config file [prefix] r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# add binding to split panes
-bind | split-window -h
-bind - split-window -v
-
-# add vim-type movement
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vim resize panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# set 256 colors
-set -g default-terminal "screen-256color"
-
-# set colors
-
-# staus bar
-set -g status-fg white
-set -g status-bg black
-
-## active windows
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-
-
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-
-
+setw -g window-status-current-fg red
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
