unbind C-b for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # remap prefix to ctrl-a instead of default ctrl-b
 set -g prefix C-a
+unbind-key C-b
 
 # send ctrl-a to underlying program if pressed twice
 bind C-a send-prefix
