--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,13 +2,17 @@ set-option -g history-limit 100000
 
 # remap prefix to ctrl-a instead of default ctrl-b
 set -g prefix C-a
+# Free the original Ctrl-b prefix keybinding
 unbind-key C-b
 
 # send ctrl-a to underlying program if pressed twice
 bind C-a send-prefix
 
 # lower default delay to 1
-set -sg escape-time 1
+set -s escape-time 1
+
+# Set the base index for windows to 1 instead of 0
+set -g base-index 1
 
 # bind key to reload this config file [prefix] r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -23,11 +27,17 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Quick window selection
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
 # vim resize panes
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+# mouse support - set to on if you want to use the mouse
+set -g mouse off
 
 # set 256 colors
 set -g default-terminal "screen-256color"
@@ -46,3 +56,15 @@ setw -g window-status-attr dim
 setw -g window-status-current-fg red
 setw -g window-status-current-bg default
 setw -g window-status-current-attr bright
+
+# colors for pane borders
+setw -g pane-border-style fg=green,bg=black
+setw -g pane-active-border-style fg=white,bg=yellow
+
+# active pane normal, other shaded out
+setw -g window-style fg=colour240,bg=colour235
+setw -g window-active-style fg=white,bg=black
+
+# Command / message line
+set -g message-style fg=white,bold,bg=black
+
