--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,17 +45,12 @@ set -g default-terminal "screen-256color"
 # set colors
 
 # staus bar
-set -g status-fg white
-set -g status-bg black
+set -g status-style fg=white,bg=black
 
 ## active windows
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
 
-setw -g window-status-current-fg red
-setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=red,bg=default,bright
 
 # colors for pane borders
 setw -g pane-border-style fg=green,bg=black
