--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-*.swp
-*.swo
-boom.txt
-deleteme.txt
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
 *.vim
+
+# Log files
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+newrelic_agent.log*
+coverage/
+
+boom.txt
+boom
+deleteme.txt
+
+node_modules
+.DS_Store
