tmux and dos2unix osx install

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,8 +57,8 @@ setw -g pane-border-style fg=green,bg=black
 setw -g pane-active-border-style fg=white,bg=yellow
 
 # active pane normal, other shaded out
-setw -g window-style fg=colour240,bg=colour235
-setw -g window-active-style fg=white,bg=black
+#setw -g window-style fg=colour240,bg=colour235
+ setw -g window-active-style fg=white,bg=black
 
 # Command / message line
 set -g message-style fg=white,bold,bg=black
