--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,17 +48,17 @@ set -g default-terminal "screen-256color"
 set -g status-style fg=white,bg=black
 
 ## active windows
-setw -g window-status-style fg=cyan,bg=default,dim
+setw -g window-status-style fg=cyan,bg=default
 
 setw -g window-status-current-style fg=red,bg=default,bright
 
 # colors for pane borders
 setw -g pane-border-style fg=green,bg=black
-setw -g pane-active-border-style fg=white,bg=yellow
+#setw -g pane-active-border-style fg=white,bg=yellow
 
 # active pane normal, other shaded out
-#setw -g window-style fg=colour240,bg=colour235
- setw -g window-active-style fg=white,bg=black
+ #setw -g window-style fg=colour240,bg=colour235
+ #setw -g window-active-style fg=white,bg=black
 
 # Command / message line
 set -g message-style fg=white,bold,bg=black
