--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,13 @@
 [user]
 	email = <gregory.ostermayr@gmail.com>
 	name = Gregory Ostermayr
-	signingkey = 4AAC743A6731895C
+  #signingkey = 4AAC743A6731895C
 
 [color]
   ui = auto
 [core]
 	excludesfile = ~/.gitignore
 [commit]
-	gpgsign = true
+  #gpgsign = true
 [rerere]
 	enabled = true
