delta diff & cleaning up vim config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,4 @@
+
 [user]
 	email = <gregory.ostermayr@gmail.com>
 	name = Gregory Ostermayr
@@ -15,3 +16,19 @@
 	ff = only
 [init]
 	defaultBranch = main
+
+[pager]
+  diff = delta
+  log = delta
+  reflog = delta
+  show = delta
+
+[delta]
+  line-numbers = true
+  plus-style = "syntax #012800"
+  minus-style = "syntax #340001"
+  syntax-theme = zenburn
+  navigate = true
+
+[interactive]
+  diffFilter = delta --color-only
