shorten starship prompt

--- a/starship.toml
+++ b/starship.toml
@@ -1,3 +1,10 @@
+format = """
+$directory\
+$git_branch\
+$git_status\
+"""
+add_newline = true
+
 [character]
 success_symbol = "[>](bold green)"
 error_symbol = "[x](bold red)"
